--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ lazy_static = "1.4"
 log = "0.4"
 log4rs = "1.3"
 nix = { version = "0.28", features = ["user"] }
-parse_duration = "2.1"
+parse_duration0 = "3.0"
 regex = "1.10"
 rusoto_core = "0.48"
 rusoto_s3 = "0.48"
